// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-star-rating SSR > renders all values 1`] = `
"<div
  class="star-rating-examples"
>
  <div
    aria-label="0 stars"
    class="star-rating"
    data-stars="0"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <symbol
        id="icon-star-dynamic"
        viewBox="0 0 16 16"
      >
        <path
          d="M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"
          fill="var(--color-star-rating-full, transparent)"
          stroke="var(--color-star-rating-full-stroke, #707070)"
          stroke-width="1.25"
        />
        <path
          clip-path="polygon(0 0, 50% 0, 50% 100%, 0 100%)"
          d="M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"
          fill="var(--color-star-rating-half, transparent)"
          stroke="var(--color-star-rating-half-stroke, #707070)"
          stroke-width="1.25"
        />
      </symbol>
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="0.5 stars"
    class="star-rating"
    data-stars="0-5"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="1 star"
    class="star-rating"
    data-stars="1"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="1.5 stars"
    class="star-rating"
    data-stars="1-5"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="2 stars"
    class="star-rating"
    data-stars="2"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="2.5 stars"
    class="star-rating"
    data-stars="2-5"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
  </div>
  <div
    aria-label="3 stars"
    class="star-rating"
    data-stars="3"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon icon icon--star-dynamic"
    >
      <use
        href="#icon-star-dynamic"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="star-rating__icon i..."
`;

exports[`evo-star-rating SSR > renders default 1`] = `
"<div
  aria-label="Rating: 3.5 out of 5"
  class="star-rating"
  data-stars="3-5"
  role="img"
>
  <svg
    aria-hidden="true"
    class="star-rating__icon icon icon--star-dynamic"
  >
    <symbol
      id="icon-star-dynamic"
      viewBox="0 0 16 16"
    >
      <path
        d="M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"
        fill="var(--color-star-rating-full, transparent)"
        stroke="var(--color-star-rating-full-stroke, #707070)"
        stroke-width="1.25"
      />
      <path
        clip-path="polygon(0 0, 50% 0, 50% 100%, 0 100%)"
        d="M8.596 1.928a.625.625 0 0 0-1.19 0L6.055 6.136H1.62a.625.625 0 0 0-.346 1.146l3.56 2.364-1.366 4.035a.625.625 0 0 0 .953.71L8 11.862l3.578 2.528a.625.625 0 0 0 .953-.71l-1.366-4.036 3.55-2.364a.625.625 0 0 0-.346-1.145H9.955l-1.36-4.207Z"
        fill="var(--color-star-rating-half, transparent)"
        stroke="var(--color-star-rating-half-stroke, #707070)"
        stroke-width="1.25"
      />
    </symbol>
    <use
      href="#icon-star-dynamic"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="star-rating__icon icon icon--star-dynamic"
  >
    <use
      href="#icon-star-dynamic"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="star-rating__icon icon icon--star-dynamic"
  >
    <use
      href="#icon-star-dynamic"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="star-rating__icon icon icon--star-dynamic"
  >
    <use
      href="#icon-star-dynamic"
    />
  </svg>
  <svg
    aria-hidden="true"
    class="star-rating__icon icon icon--star-dynamic"
  >
    <use
      href="#icon-star-dynamic"
    />
  </svg>
</div>"
`;
